--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -5,11 +5,11 @@
     <artifactId>Server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
+    <properties> 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.mycompany.server.Server</exec.mainClass>
+        <exec.mainClass>com.mycompany.server.Main</exec.mainClass>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.github.vbmacher/java-cup-runtime -->
